changed code og index.html with code saved in drive. Filled home page .

--- a/index.html
+++ b/index.html
@@ -39,28 +39,37 @@
     <div class="main_div">
       <div class="left_div">
         <div class="upper_left_div">
-          <a href="index.html"><img src="img/abes_logo.png" alt="ABES Logo" class="abes_logo"></a>
-          <h1>Upper left div</h1>
+          <a href="index.html"><img src="abes_logo.png" alt="ABES Logo" class="abes_logo"></a>
+          <h5 class="welcome_text" >Welcome to our Students Result Management System, where academic excellence meets seamless administration. Our platform is designed to simplify the complex task of result management, providing students, teachers, and administrators with a user-friendly interface to track and analyze academic progress effortlessly.</h5>
         </div>
         <div class="lower_left_div">
           
           <div class="student_login_div">
-            <img src="img/student.png" alt="student image" class="student_logo">
-            <a href="student_login.html"><button class="button">Studen Login</button></a>
+            <img src="student.png" alt="student image" class="student_logo">
+            <a href="login.php"><button class="button" type="submit">Studen Login</button></a>
           </div>
           <div class="admin_login_div">
-            <img src="img/teacher.png" alt="Teacher image" class="admin_logo">
-            <a href="admin_login.html" type="button"><button class="button">Admin Login</button></a>
+            <img src="teacher.png" alt="Teacher image" class="admin_logo">
+            <a href="admin_login.php" type="button"><button class="button">Admin Login</button></a>
           </div>
         </div>
       </div>
       <div class="right_div">
-        <h2>Right div</h2>
+        <img src="1.jpg" alt="" class="right_img">
+        <h2>Student Result Management System</h2>
+         
+        <p>Explore academic excellence with our streamlined Students Result Management System. Effortlessly track and analyze progress for a seamless educational experience.</p>
       </div>
     </div>
 
-    <div>
-      <h1>Page 2</h1>
+
+    <!--Page 2 -->
+
+
+    <div class="page_2">
+      <h1>Meet Our Top Students</h1>
+      <h4>Here is the list of students who have scored a remarkable marks in 2023 UE.</h4>
+
     </div>
   </main>
 
@@ -76,7 +85,7 @@
     <li class="menu_item"><a href="#" class="menu_link">Home</a></li>
     <li class="menu_item"><a href="#" class="menu_link">About</a></li>
     <li class="menu_item"><a href="#" class="menu_link">Contact</a></li>
-    <li class="menu_item"><a href="#" class="menu_link">Hellpful Links</a></li>
+    <li class="menu_item"><a href="test_register.php" class="menu_link">Hellpful Links</a></li>
   </ul>
 <p>hello ❤</p>
 </footer>
