updated link of studen and admin login grom .php to .html

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           
           <div class="student_login_div">
             <img src="student.png" alt="student image" class="student_logo">
-            <a href="login.php"><button class="button" type="submit">Studen Login</button></a>
+            <a href="student_login.html"><button class="button" type="submit">Studen Login</button></a>
           </div>
           <div class="admin_login_div">
             <img src="teacher.png" alt="Teacher image" class="admin_logo">
-            <a href="admin_login.php" type="button"><button class="button">Admin Login</button></a>
+            <a href="admin_login.html" type="button"><button class="button">Admin Login</button></a>
           </div>
         </div>
       </div>
